--- a/config/database.yml
+++ b/config/database.yml
@@ -17,16 +17,13 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
-  username: <%= ENV['db_user'] %>
-  password: <%= ENV['db_pass'] %>
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
 development:
   <<: *default
-  database: Hackhaton_development
+  database: Hackhato_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Hackhaton_test
+  database: Hackhato_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,5 +81,4 @@ test:
 production:
   <<: *default
   database: Hackhaton_production
-  username: Hackhaton
   password: <%= ENV['HACKHATON_DATABASE_PASSWORD'] %>
